scrollbar fix
removed scrollbars on firefox

--- a/src/Components/Playlist/Playlist.css
+++ b/src/Components/Playlist/Playlist.css
@@ -7,6 +7,7 @@
   padding: 0.8rem;
   max-height: 40rem;
   min-height: 5rem;
+  scrollbar-width: none;
 }
 
 @media only screen and (max-width: 1020px) {
